PR/53981: Jonathan Perkins: history_list should null-terminate